tests/machine/x/st/membership.out
Object: 2 error: did not understand #in
MessageNotUnderstood(Exception)>>signal (ExcHandling.st:254)
SmallInteger(Object)>>doesNotUnderstand: #in (SysExcept.st:1448)
UndefinedObject>>executeStatements (../../../tests/machine/x/st/membership.st:3)
Object: 4 error: did not understand #in
MessageNotUnderstood(Exception)>>signal (ExcHandling.st:254)
SmallInteger(Object)>>doesNotUnderstand: #in (SysExcept.st:1448)
UndefinedObject>>executeStatements (../../../tests/machine/x/st/membership.st:4)