tests/machine/x/st/membership.st
| nums |
nums := {1. 2. 3}.
Transcript show: (nums includes: 2) printString; cr.
Transcript show: (nums includes: 4) printString; cr.
